{
    "settings": "Einstellungen",
    "appLanguage" : "App-Sprache",
    "languages" : "Sprachen",
    "languagesText" : "Dies sind die verfügbaren Sprachen. Du kannst sie manuell herunterladen, aktualisieren und löschen.",
    "allLanguages" : "Alle Sprachen",
    "updates" : "Aktualisierungen",
    "@updates" : {
...
            "language": {
                "type": "String",
                "example": "German (de)"
            }
        }
    },
    "essentials": "Grundlagen",
    "essentialsForTrainers": "Grundlagen - für Trainer",
    "innerHealing": "Innere Heilung",
    "innerHealingForTrainers": "Innere Heilung - für Trainer",
    "sorry": "Tut uns leid",
    "notTranslated": "Die gewünschte Seite ist leider noch nicht auf {language} übersetzt.\nWenn du uns bei der Übersetzung helfen kannst, dann melde dich bitte!",
    "@notTranslation": {
...
    "contributingText": "Viele Menschen haben ihre Zeit, Fähigkeiten und Finanzen eingesetzt, um diese Vision Realität werden zu lassen. Vielen Dank! Es gibt viele Bereich, wo du dich einbringen kannst: Übersetzen, programmieren, spenden, Design, Fehlersuche, ...\nDu erreichst uns mit einer Mail an contact@4training.net – wir freuen uns über deine Ideen und dein Feedback!",
    "openSource": "Open Source",
    "openSourceText": "Diese App ist Open Source. Du hast die Freiheit, sie zu nutzen, zu analysieren, weiterzugeben und zu verbessern. Quellcode, geplante nächste Features und mehr Infos\nhttps://github.com/4training/app4training",
    "version": "Version",
    "welcome": "Herzlich Willkommen!",
    "selectAppLanguage": "Bitte wähle die App-Sprache aus. Das Menü und alle Einstellungen werden in dieser Sprache sein.",
    "continueText": "Weiter",
    "back": "Zurück",
    "appName": "4training.net-App",
    "promoFeature1": "{count} Arbeitsblätter",
    "@promoFeature1": {
        "description": "One feature shown on the screen on first startup of the app with number of worksheets available",
        "placeholders": {
...
    "downloadUpdatesNow": "Jetzt herunterladen",
    "sharePdf": "PDF teilen",
    "openPdf": "PDF öffnen",
    "openInBrowser": "Im Browser öffnen",
    "shareLink": "Link teilen",
    "pdfNotAvailable": "Für dieses Arbeitsblatt ist leider noch kein PDF verfügbar. Wenn du mithelfen möchtest, damit sich das bald ändert, dann melde dich bitte!",
    "loading": "Wird geladen",
    "@loading": {
        "description": "Caption under the spinner on the startup screen"
    },
    "loadingContent": "Inhalt wird geladen...",
    "@loadingContent": {
        "description": "Caption under the spinner while a worksheet is being loaded"
...
