...
{
    "language_code": "de",
    "english_name": "German",
    "worksheets": [
        {
            "page": "Forgiving_Step_by_Step",
            "title": "Schritte der Vergebung",
            "filename": "Schritte_der_Vergebung.html",
            "version": "1.3",
            "pdf": "Schritte_der_Vergebung.pdf"
        }
    ]
}
...
